added login and out functions

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -45,7 +45,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Pokemon</a>
+                <a class="navbar-brand" href="/login/">login</a>
+                <a class="navbar-brand" href="/logout/">logout</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -55,7 +56,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/pokemonlist_view.html/">Portfolio</a>
+                        <a href="/pokemonlist_view/">Portfolio</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
