--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -1,10 +1,11 @@
+
 {% load static %}
-{% extends 'base.html' %}
+
 
 {% block body %}
     
 {% if request.user.is_anonymous %}
-    <form method="post" action="{% url 'login_view' %}">
+    <form method="post" action="{% url 'login' %}">
         {% csrf_token %}
             <table>
             <tr>
@@ -24,8 +25,6 @@
     </form>
 
 </br>
-<a href="{% url 'social:begin' 'twitter' %}?next={{ request.path }}">Login with Twitter</a>
-
 
 {% else %}
 
