--- a/main/templates/pokedex_view.html
+++ b/main/templates/pokedex_view.html
@@ -3,11 +3,11 @@
 
 {% block body %} 
     <!-- About Section -->
-    <section class="success" id="Pokemon List">
+    <section class="success" id="Pokedex">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1>Pokemon List</h1>
+                    <h1>Pokedex</h1>
                     <hr class="star-light">
                 </div>
             </div>
