--- a/main/templates/spritelist.html
+++ b/main/templates/spritelist.html
@@ -1,13 +1,12 @@
 {% extends 'base.html' %}
-{% load staticfiles %}
-   
-{% block body %} 
-    <!-- About Section -->
-    <section class="success" id="Pokemon List">
+{% load static %}
+
+{% block body %}
+ <section class="success" id="Sprite List">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1>Pokemon List</h1>
+                    <h1>Sprite List</h1>
                     <hr class="star-light">
                 </div>
             </div>
@@ -15,16 +14,15 @@
                 <div class="col-lg-2 col-lg-offset-5 text-center">
                     {% for object in object_list %}
                     <br>
-                    <p><h3><a href="/pokemondetail_view/{{ object.name}}/">{{ object.name }}</a></h3></p>
+                    <p><h3><a href="/pokemondetail/{{ object.slug }}/">{{ object.name }}</a></h3></p>
                     {% endfor %}
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Sign In
+                    <a href="/pokemonlist_view/" class="btn btn-lg btn-outline">
+                        <i class="fa fa-download"></i> Pokemon List
                     </a>
                 </div>
             </div>
         </div>
-    </section>
-{% endblock body%}
-
+    </section>   
+{% endblock body %}
