fixed broken pokemondetail_view.

--- a/main/templates/card.html
+++ b/main/templates/card.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html>
-<body>
+{% extends 'base.html' %}
+{% load static %}
+{% block body %}
 
-<h2>Spectacular Mountain</h2>
-<img src="http://www.pokemon.com/us/pokemon-tcg/" alt="Mountain View" style="width:304px;height:228px;">
+<h2>Trading Card View</h2>
+<img src="url http://www.pokemon.com/us/pokemon-tcg/" alt="Card View" style="width:304px;height:228px;">
 
-</body>
-</html>
+{% endblock body %}
