--- a/main/templates/spritelist.html
+++ b/main/templates/spritelist.html
@@ -14,7 +14,7 @@
                 <div class="col-lg-2 col-lg-offset-5 text-center">
                     {% for object in object_list %}
                     <br>
-                    <p><h3><a href="/pokemondetail/{{ object.slug }}/">{{ object.name }}</a></h3></p>
+                    <p><h3><a href="#pokemondetail_view/{{ object.slug }}/">{{ object.name }}</a></h3></p>
                     {% endfor %}
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
