--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -205,20 +205,20 @@
                                 <label>Message</label>
                                 <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
                                 <p class="help-block text-danger"></p>
-                            </div>
+                            </div>-->
                         </div>
                         <br>
                         <div id="success"></div>
                         <div class="row">
                             <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-success btn-lg">Send</button>
+                                <button type="submit" class="btn btn-success btn-lg">Comming soon</button>
                             </div>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
-    </section> -->
+    </section> 
 
     <!-- Footer -->
     <footer class="text-center">
@@ -233,7 +233,7 @@
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="http://www.pokemon.com/us/pokemon-tcg/" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
@@ -501,7 +501,7 @@
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
-    function vote(slug, direction) {
+    <!-- function vote(slug, direction) {
         $.post('/tips/'+slug+'/'+direction+'vote/', {HTTP_X_REQUESTED:'XMLHttpRequest'},
                 function(data) {
                     if (data.success == true) {
@@ -512,7 +512,7 @@
                     }
                 }, 'json'
             )
-    }
+    } -->
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
